# markitdown-readable

./: .gitignore  README.md  docx-2-md优化方案.md  markit.py  pyproject.toml  pytest.ini
docs/: docx-to-readable-markdown.md
llm_docx_markitdown/: __init__.py  converter.py
llm_pdf_markitdown/: __init__.py  converter.py
llm_pptx_markitdown/: __init__.py  converter.py
markitdown_readable/: __init__.py  docx.py  pdf.py  pptx.py
