[project]
name = "markitdown-readable"
version = "0.1.0"
description = "Readable Markdown converters for MarkItDown."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markitdown[docx,pdf]>=0.1.4",
    "pymupdf>=1.23.0",
    "python-pptx>=0.6.21",
    "python-docx>=1.0.0",
    "opendal>=0.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "basic: Basic read/write operations",
    "list: List operations",
    "metadata: Metadata operations",
    "edge_case: Edge case tests",
]
